# kulinaria_api

./: .env  Cargo.toml  kulinaria_db.backup  kulinaria_db.sql
src/: handlers.rs  main.rs  models.rs
swagger/: openapi.json
