[package]
name = "kulinaria_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.3", features = ["macros"] }
dotenvy = "0.15.7"
native-tls = "0.2.11"
postgres-native-tls = "0.5.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1"
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
derive_more = "0.99.17"
chrono = { version = "0.4.37", features = ["serde"] }
